Update about section, assets, and bump cache to v2

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="theme-color" content="#0b0f14" />
 
   <!-- ✅ SEO -->
-  <meta name="description" content="5Spice – Mira Road | Indo-Chinese Restaurant | Online Ordering & Table Booking" />
-  <title>5Spice – Mira Road</title>
+  <meta name="description" content="5spice – Mira Road | Indo-Chinese Restaurant | Online Ordering & Table Booking" />
+  <title>5spice – Mira Road</title>
 
   <!-- ✅ WhatsApp / Social Preview -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="5Spice – Mira Road">
+  <meta property="og:title" content="5spice – Mira Road">
   <meta property="og:description" content="Indo-Chinese restaurant in Mira Road. Order online & book a table. WhatsApp ordering available.">
   <meta property="og:image" content="https://5spicemr.in/images/og.jpg">
   <meta property="og:url" content="https://5spicemr.in/">
@@ -53,16 +53,13 @@
 <body>
 
   <!-- Header -->
-  <header class="topbar">
-    <div class="topbar-left">
-      <a class="brand" href="#top" aria-label="Go to top">
-        <img src="images/logo.png" alt="5Spice Logo" class="brand-logo" />
-        <span class="brand-text">
-          <span class="brand-name">5Spice</span>
-          <span class="brand-area">Mira Road</span>
-        </span>
-      </a>
-    </div>
+<header class="topbar">
+  <div class="topbar-left">
+
+    <a class="brand" href="#top" aria-label="Go to top">
+      <img src="images/logo.png" alt="5spice Logo" class="brand-logo" />
+      <span class="brand-area">Mira Road</span>
+    </a>
 
     <div class="topbar-right">
       <button id="btn-whatsapp-top" class="iconbtn" aria-label="WhatsApp">
@@ -77,7 +74,9 @@
         ☰
       </button>
     </div>
-  </header>
+
+  </div>
+</header>
 
   <!-- Mobile Nav -->
   <nav id="mobile-nav" class="mobile-nav" aria-hidden="true">
@@ -93,11 +92,11 @@
     <!-- Hero -->
     <section class="hero">
       <div class="hero-bg">
-        <img src="images/hero.jpg" alt="5Spice dishes" loading="lazy" decoding="async" />
+        <img src="images/hero.jpg" alt="5spice dishes" loading="lazy" decoding="async" />
       </div>
 
       <div class="hero-content">
-        <h1>5Spice</h1>
+        <h1></h1>
         <p class="hero-tag">Where Every Toss Sparks a Taste</p>
 
         <div class="hero-cta">
@@ -116,9 +115,14 @@
     <!-- About -->
     <section id="about" class="section">
       <div class="wrap">
-        <h2>About 5Spice</h2>
+        <h2>About 5spice</h2>
         <p class="muted">
-          5Spice is a modern Indo-Chinese restaurant in Mira Road, known for its balanced flavours, quality ingredients, and a warm, contemporary dining experience.
+          5spice is a contemporary Indo-Chinese dining brand with multiple outlets across Mumbai, known for its refined flavours, consistent quality, and thoughtfully crafted dining experiences. Blending modern ambience with classic favourites, 5spice presents a balanced menu designed for dine-in, pickup, and delivery—without compromise.
+        </p>
+
+        <h2>About 5spice · Mira Road</h2>
+        <p class="muted"> 
+          5spice Mira Road brings the brand’s contemporary Indo-Chinese flavours to a relaxed neighbourhood setting. With the same commitment to refined recipes, consistent quality, and modern dining ambience, the Mira Road outlet delivers a dependable experience…
         </p>
 
         <div class="chips">
@@ -251,7 +255,7 @@
 
         <div class="two-col">
           <div class="card">
-            <h3>5Spice – Mira Road</h3>
+            <h3>5spice – Mira Road</h3>
 
             <p class="muted">
               📞 <a href="tel:+919867378209">+91 98673 78209</a>
@@ -266,7 +270,7 @@
             </p>
 
             <p class="muted">
-              ⏰ 12:00 PM – 3:30 PM • 7:00 PM – 12:00 AM
+              ⏰ <strong>12:00 PM – 3:30 PM</strong> • <strong>7:00 PM – 12:00 AM</strong>
             </p>
 
             <div class="btnrow">
@@ -308,7 +312,7 @@
     <footer class="footer">
       <div class="wrap footer-row">
         <div>
-          © <span id="year"></span> 5Spice – Mira Road
+          © <span id="year"></span> 5spice – Mira Road
         </div>
 
         <div class="muted site-credit">
