Menu updates, UI improvements, and SW cache v3

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <h3>5spice – Mira Road</h3>
 
             <p class="muted">
-              📞 <a href="tel:+919867378209">+91 98673 78209</a>
+              📞 <a href="tel:+919930906279">+91 9930906279</a>
             </p>
 
             <p class="muted">
@@ -274,7 +274,7 @@
             </p>
 
             <div class="btnrow">
-              <button id="btn-whatsapp-contact" class="btn primary">WhatsApp</button>
+              <button id="btn-reviews-contact" type="button" class="btn primary">Google Reviews</button>
               <button id="btn-call-contact" class="btn">Call</button>
               <button id="btn-directions-contact" class="btn">Directions</button>
             </div>
@@ -288,7 +288,7 @@
                 <div class="offer-title">Website Ordering – Delivery Only</div>
                 <ul>
                   <li>Flat 20% OFF</li>
-                  <li>30% OFF above ₹10,000</li>
+                  <li>30% OFF on orders above ₹10,000</li>
                 </ul>
               </div>
 
