--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-41NHJQ66BD"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V44HQ5G9X0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
