updated GA4 to new property

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-41NHJQ66BD');
+    gtag('config', 'G-V44HQ5G9X0');
   </script>
 
   <!-- Google Font: Inter (for category & UI text) -->
